update plotsection and svg alignment.  fixes #5.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -133,7 +133,7 @@ body {
 }
 
 #section-name {
-  height: 60px;
+  height: 50px;
   }
 
 .table th,
@@ -144,3 +144,8 @@ body {
   vertical-align: middle!important;
   /*border-top: 1px solid #dddddd;*/
 }
+
+#section-name plotsection, #section-name svg {
+  vertical-align: middle;
+}
+
